--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="cn.cookiemouse.detectiontool">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -23,6 +23,7 @@
         <activity
             android:name=".activity.EditActivity"
             android:screenOrientation="portrait" />
+        <activity android:name=".activity.TestActivity"></activity>
     </application>
 
 </manifest>
